--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,3 +1,61 @@
+@import 'reset';
+//Sprite
+.blackstar, .graystar
+{ display: inline-block; background: url('../../img/starssprite.png') no-repeat; overflow: hidden; text-indent: -9999px; text-align: left; }
+ 
+.blackstar { background-position: -0px -0px; width: 10px; height: 10px; }
+.graystar { background-position: -0px -10px; width: 10px; height: 10px; }
+//sprite
 body {
-    
+    color: #999;
+    font-family: Arial, sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+}
+
+.wrapper {
+    min-height: 1200px;
+    background: url(../../img/background.jpg) center center no-repeat;
+    background-size: cover;
+    padding: 400px 100px;
+
+    h2 {
+        color: #333;
+        font-size: 12px;
+        line-height: 35px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
+    .row {
+        width: 100%; 
+        text-align: justify;
+        &:after {
+            content: "";
+            display: inline-block;
+            width: 100%;
+            height: 0;
+        }
+        .row-item {
+            float: none;
+            display: inline-block;
+            min-width: 150px;
+            max-width: 260px;
+            background: #fff;
+            padding: 20px;
+
+            .stars {
+                margin-top: 10px;
+                text-align: center;
+
+                .star {
+                    cursor: pointer;
+                    &:hover {
+                        background-position: -0px -0px; width: 10px; height: 10px;
+                    }
+                }
+            }
+        }
+    }
 }
